<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted">
    <include layout="@layout/top_banner"
        android:id="@+id/top_banner"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"/>

    <EditText
        android:id="@+id/password_enter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"
        android:hint="@string/Enter_password"
        android:background="@drawable/border"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"/>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/password_enter"
        app:layout_constraintBottom_toTopOf="@id/one"
        android:text="@string/password"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"
        android:hint="@string/confirm_here"
        android:background="@drawable/border"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"/>

    <TextView
        android:id="@+id/confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/password_enter"
        app:layout_constraintBottom_toTopOf="@id/two"
        android:text="@string/confirm"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/go"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/set_password"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.06"
        android:background="@drawable/green_button"/>
    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/four"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/getstarted"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <ImageView
        android:id="@+id/go_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.12"
        app:layout_constraintHeight_percent="0.08"
        app:srcCompat="@drawable/back_arrow_vec"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text ="@string/caution"
        android:textColor="@color/red"

        />
</androidx.constraintlayout.widget.ConstraintLayout>