<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bottom_border"
        app:layout_constraintHeight_percent="0.35">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.50"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/circle_shape"
            app:srcCompat="@drawable/homelogo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:id="@+id/password_enter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"
        android:hint="@string/Enter_password"
        android:background="@drawable/border"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/password_enter"
        app:layout_constraintBottom_toTopOf="@id/one"
        android:text="@string/password"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/go"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/go"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.06"
        android:background="@drawable/green_button"/>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go"
        app:layout_constraintBottom_toTopOf="@id/get_started"
        android:text="@string/forgot_password"
        android:textColor="@color/border"
        />
    <Button
        android:id="@+id/get_started"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/getstarted"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.06"
        android:background="@drawable/green_button"/>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        app:layout_constraintBottom_toTopOf="@id/password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"
        android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

