<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">
    <include layout="@layout/top_banner"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one"
        android:textSize="18sp"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"
        android:text="@string/reset_password"/>
    <TextView
        android:id="@+id/bank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/bank_select"
        app:layout_constraintBottom_toTopOf="@id/bank_select"
        android:text="@string/bank_name_title"
        android:textStyle="bold"
        android:textColor="@color/primaryGreen"
        />
    <EditText
        android:id="@+id/bank_select"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two"
        android:background="@drawable/border"
        android:hint="@string/bank_name_title"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"/>

    <TextView
        android:id="@+id/bank_num_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/bank_num_f"
        app:layout_constraintBottom_toTopOf="@id/bank_num_f"
        android:text="@string/enter_bank_num"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/bank_num_f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/three"
        android:background="@drawable/border"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/enter_bank_num"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"/>


    <TextView
        android:id="@+id/new_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/new_pass"
        app:layout_constraintBottom_toTopOf="@id/new_pass"
        android:text="@string/password"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/new_pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/four"
        android:background="@drawable/border"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"/>


    <TextView
        android:id="@+id/confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/confirm"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        android:text="@string/confirm"
        android:textColor="@color/primaryGreen"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/five"
        android:background="@drawable/border"
        android:hint="@string/confirm_here"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"/>

    <Button
        android:id="@+id/set_password_f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintHeight_percent="0.05"
        android:text="@string/set_password"
        android:textColor="@color/white"
        android:background="@drawable/green_button"/>

    <ImageView
        android:id="@+id/go_back_f"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.12"
        app:layout_constraintHeight_percent="0.08"
        app:srcCompat="@drawable/back_arrow_vec"/>

</androidx.constraintlayout.widget.ConstraintLayout>