<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.10"
        android:background="@drawable/bottom_border">

        <TextView
            android:id="@+id/today_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingLeft="2dp"
            android:text="@string/total_today"/>

        <TextView
            android:id="@+id/month_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingRight="2dp"
            android:text="@string/total_month"/>

        <TextView
            android:id="@+id/today_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            />

        <TextView
            android:id="@+id/month_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/month_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingRight="2dp"
            android:paddingTop="2dp"
            />
        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id ="@+id/heading_fh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        android:textColor="@color/dark"
        android:textSize="14sp"
        android:text="@string/check_details"/>

    <ScrollView
        android:id="@+id/main_scrolling"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.94"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading_fh"
        android:background="@drawable/full_border"
        >

        <LinearLayout
            android:id="@+id/scroll_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        </LinearLayout>

    </ScrollView>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/drop_down_bank"
        app:layout_constraintWidth_percent="0.50"
        app:layout_constraintStart_toStartOf="@id/main_scrolling"
        app:layout_constraintBottom_toTopOf="@id/one"
        android:spinnerMode="dropdown"
        android:dropDownSelector="@drawable/ll_background"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/check_a_day"
        app:layout_constraintStart_toStartOf="@id/main_scrolling"
        app:layout_constraintTop_toBottomOf="@id/margin1"
        app:layout_constraintWidth_percent="0.32"
        android:inputType="text"
        android:maxLines="1"
        android:background="@drawable/border"
        android:hint="@string/date_format_day"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/margin1"
        app:layout_constraintStart_toStartOf="@id/drop_down_bank"
        app:layout_constraintTop_toBottomOf="@id/drop_down_bank"
        app:layout_constraintWidth_percent="0.05"/>



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_a_day_button"
        android:background="@drawable/green_button"
        app:layout_constraintStart_toEndOf="@id/check_a_day"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@id/check_a_day"
        app:srcCompat="@drawable/play"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/display_day"
        app:layout_constraintTop_toTopOf="@id/check_a_day"
        app:layout_constraintStart_toEndOf="@id/check_a_day_button"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="8dp"
        android:text="@string/check_day"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/margin2"
        app:layout_constraintStart_toStartOf="@id/drop_down_bank"
        app:layout_constraintTop_toBottomOf="@id/check_a_day"
        app:layout_constraintHeight_percent="0.055"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/check_a_month"
        app:layout_constraintStart_toStartOf="@id/drop_down_bank"
        app:layout_constraintTop_toBottomOf="@id/margin2"
        android:background="@drawable/border"
        app:layout_constraintWidth_percent="0.32"
        android:hint="@string/date_format_month"
        android:inputType="text"
        android:maxLines="1"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_a_month_button"
        android:background="@drawable/green_button"
        app:layout_constraintStart_toEndOf="@id/check_a_day"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@id/check_a_month"
        app:srcCompat="@drawable/play"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/display_month"
        app:layout_constraintTop_toTopOf="@id/check_a_month"
        app:layout_constraintStart_toEndOf="@id/check_a_day_button"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="8dp"
        android:text="@string/check_month"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>